--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node app"
+    "start": "node sprout"
   },
   "dependencies": {
     "express": "3.0.0rc5",
-    "ejs": "*"
+    "ejs": "*",
+    "mongoq": "*"
   }
 }
