--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node sprout"
+    "start": "node app"
   },
   "dependencies": {
     "express": "3.0.0rc5",
-    "ejs": "*",
-    "mongoq": "*"
+    "jade": "*",
+    "mongoq" : "*"
   }
 }
